<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AdDetailsActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerImages"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ad_details_carousel_layout_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAdDetailTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ad_details_title_layout_height"
        android:layout_marginTop="@dimen/ad_details_title_layout_margin_top"
        android:background="@drawable/ic_background_plain_text"
        android:padding="@dimen/ad_details_title_layout_padding"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/ad_details_text_size"
        android:layout_marginStart="@dimen/ad_details_layout_margin_start_end"
        android:layout_marginEnd="@dimen/ad_details_layout_margin_start_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carouselAds" />

    <TextView
        android:padding="@dimen/ad_details_uf_layout_padding"
        android:id="@+id/textAdDetailUf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        android:background="@drawable/ic_background_plain_text"
        android:textSize="@dimen/ad_details_text_size"
        android:layout_marginTop="@dimen/ad_details_uf_layout_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/textAdDetailTitle"
        app:layout_constraintStart_toEndOf="@+id/imageLocation"
        android:layout_marginStart="@dimen/ad_details_uf_layout_margin_start"/>

    <ImageView
        android:id="@+id/imageLocation"
        android:layout_width="@dimen/ad_details_image_location_layout_format"
        android:layout_height="@dimen/ad_details_image_location_layout_format"
        android:layout_marginTop="@dimen/ad_details_image_location_layout_margin_top"
        android:background="@drawable/ic_location_24"
        android:padding="@dimen/ad_details_image_location_layout_padding"
        android:layout_marginStart="@dimen/ad_details_layout_margin_start_end"
        app:layout_constraintBottom_toBottomOf="@+id/textAdDetailUf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdDetailTitle" />

    <TextView
        android:id="@+id/textAdDetailValue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ad_details_value_layout_height"
        android:layout_marginTop="@dimen/ad_details_value_layout_margin_top"
        android:background="@drawable/ic_background_plain_text"
        android:padding="@dimen/ad_details_value_padding"
        android:text="@string/value"
        android:layout_marginStart="@dimen/ad_details_layout_margin_start_end"
        android:layout_marginEnd="@dimen/ad_details_layout_margin_start_end"
        android:textSize="@dimen/ad_details_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdDetailUf" />

    <TextView
        android:id="@+id/textAdDetailDescription"
        android:layout_width="@dimen/ad_details_description_layout_width"
        android:layout_height="@dimen/ad_details_description_layout_height"
        android:layout_marginTop="@dimen/ad_details_description_layout_margin_top_bottom"
        android:layout_marginBottom="@dimen/ad_details_description_layout_margin_top_bottom"
        android:background="@drawable/ic_background_plain_text"
        android:inputType="textMultiLine"
        android:padding="@dimen/ad_details_description_layout_padding"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:text="@string/description"
        android:textSize="@dimen/ad_details_text_size"
        android:layout_marginStart="@dimen/ad_details_layout_margin_start_end"
        android:layout_marginEnd="@dimen/ad_details_layout_margin_start_end"
        app:layout_constraintBottom_toTopOf="@+id/buttonCall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdDetailValue" />

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background_plain_text"
        android:text="@string/call"
        android:layout_marginBottom="@dimen/ad_details_button_call_layout_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/ad_details_layout_margin_start_end"
        android:layout_marginEnd="@dimen/ad_details_layout_margin_start_end"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>