<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    tools:viewBindingIgnore="false">

    <EditText
        android:id="@+id/editRegisterName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_name_layout_height"
        android:layout_marginStart="@dimen/register_layout_margin_start_end"
        android:layout_marginEnd="@dimen/register_layout_margin_start_end"
        android:background="@drawable/ic_background_plain_text"
        android:drawableEnd="@drawable/ic_name_24_gray"
        android:drawablePadding="@dimen/register_name_layout_drawable_padding"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/register_text_padding_start_end"
        android:paddingEnd="@dimen/register_text_padding_start_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_email_layout_height"
        android:layout_marginStart="@dimen/register_layout_margin_start_end"
        android:layout_marginTop="@dimen/register_email_layout_margin_top"
        android:layout_marginEnd="@dimen/register_layout_margin_start_end"
        android:background="@drawable/ic_background_plain_text"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/register_text_padding_start_end"
        android:paddingEnd="@dimen/register_text_padding_start_end"
        android:drawableEnd="@drawable/ic_email_24_gray"
        android:hint="@string/e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterName" />

    <EditText
        android:id="@+id/editRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_password_layout_height"
        android:layout_marginStart="@dimen/register_layout_margin_start_end"
        android:layout_marginTop="@dimen/register_password_layout_margin_top"
        android:layout_marginEnd="@dimen/register_layout_margin_start_end"
        android:background="@drawable/ic_background_plain_text"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="@dimen/register_text_padding_start_end"
        android:paddingEnd="@dimen/register_text_padding_start_end"
        android:drawableEnd="@drawable/ic_password_24_gray"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterEmail" />

    <EditText
        android:id="@+id/editRegisterConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_confirm_password_layout_height"
        android:layout_marginStart="@dimen/register_layout_margin_start_end"
        android:layout_marginTop="@dimen/register_confirm_password_layout_margin_top"
        android:layout_marginEnd="@dimen/register_layout_margin_start_end"
        android:background="@drawable/ic_background_plain_text"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="@dimen/register_text_padding_start_end"
        android:paddingEnd="@dimen/register_text_padding_start_end"
        android:drawableEnd="@drawable/ic_password_24_gray"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterPassword" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/register_logo_layout_width"
        android:layout_height="@dimen/register_logo_layout_height"
        android:layout_marginTop="@dimen/register_logo_layout_margin_top"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_button_layout_height"
        android:layout_marginStart="@dimen/register_layout_margin_start_end"
        android:layout_marginTop="@dimen/register_button_layout_margin_top"
        android:layout_marginEnd="@dimen/register_layout_margin_start_end"
        android:text="@string/register"
        android:backgroundTint="@color/custom_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegisterConfirmPassword"
        android:background="@drawable/ic_background_plain_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>