<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/login_logo_layout_width"
        android:layout_height="@dimen/login_logo_layout_height"
        android:layout_marginTop="@dimen/login_logo_layout_margin_top"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_email_layout_height"
        android:layout_marginStart="@dimen/login_email_layout_margin_start_end"
        android:layout_marginTop="@dimen/login_email_layout_margin_top"
        android:layout_marginEnd="@dimen/login_email_layout_margin_start_end"
        android:background="@drawable/ic_background_plain_text"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/login_email_layout_padding_start_end"
        android:paddingEnd="@dimen/login_email_layout_padding_start_end"
        android:drawableEnd="@drawable/ic_email_24_gray"
        android:hint="@string/e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_password_layout_height"
        android:layout_marginStart="@dimen/login_password_layout_margin_start_end"
        android:layout_marginTop="@dimen/login_password_layout_margin_top"
        android:layout_marginEnd="@dimen/login_password_layout_margin_start_end"
        android:background="@drawable/ic_background_plain_text"
        android:ems="10"
        android:inputType="numberPassword"
        android:paddingStart="@dimen/login_password_padding_start_end"
        android:paddingEnd="@dimen/login_password_padding_start_end"
        android:drawableEnd="@drawable/ic_password_24_gray"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLoginEmail" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_layout_height"
        android:layout_marginStart="@dimen/login_button_layout_margin_start_end"
        android:layout_marginTop="@dimen/login_button_layout_margin_top"
        android:layout_marginEnd="@dimen/login_button_layout_margin_start_end"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/custom_primary"
        app:layout_constraintTop_toBottomOf="@+id/editLoginPassword"
        android:background="@drawable/ic_background_plain_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>